--- a/public/workoutV2.html
+++ b/public/workoutV2.html
@@ -184,22 +184,28 @@
 			<div class="row">
 				<div class="col-md-12 col-xs-12">
 					<div class="card-style" id="table-container">
-						<div class="row">
-							<div class="col-md-9 col-xs-12">
+						<!--<div class="row">
+							<div class="col-md-9 col-xs-12">-->
 								<form role="form" class="form-inline">
 									<div class="form-group" id="searchDiv">
-										<label for="search">Search Exercises</label>
-										<input type="text" name="search" id="search" class="form-control">
-										<button type="submit" id="search-button" class="btn btn-info btn-sm">Search</button>
-										<p>Search all exercises for the selected user</p>
-										<!--<p class="text-help" id="error-message"></p>-->
+										<div class="row">
+											<div class="col-md-6">
+												<label for="search">Search Exercises</label>
+												<input type="text" name="search" id="search" class="form-control">
+												<button type="submit" id="search-button" class="btn btn-info btn-sm">Search</button>
+												<p>Search all exercises for the selected user</p>
+											</div>
+											<div class="col-md-6"
+												<p id="error-message"></p>
+											</div>
+										</div>
 									</div>
 								</form>
-							</div>
+							<!--</div>
 							<div class="col-md-3 col-xs-12">
 								<p id="error-message"></p>
 							</div>
-						</div>
+						</div>-->
 					</div>
 				</div>
 			</div>
