--- a/public/workoutV2.html
+++ b/public/workoutV2.html
@@ -185,23 +185,24 @@
 				<div class="col-md-12 col-xs-12">
 					<div class="card-style" id="table-container">
 						<div class="row">
-							<div class="col-md-9 col-xs-12">
+							<div class="col-md-12 col-xs-12">
 								<form role="form" class="form-inline">
 									<div class="form-group" id="searchDiv">
 										<label for="search">Search Exercises</label>
 										<input type="text" name="search" id="search" class="form-control">
 										<button type="submit" id="search-button" class="btn btn-info btn-sm">Search</button>
 										<p>Search all exercises for the selected user</p>
+										<label for="error message" id="error-message"></label>
 									</div>
 								</form>
 							</div>
-							<div class="col-md-3 col-xs-12">
+							<!--<div class="col-md-3 col-xs-12">
 								<form role="form" class="form-inline">
 									<div class="form-group">
 										<p id="error-message"></p>
 									</div>
 								</form>
-							</div>
+							</div>-->
 						</div>
 					</div>
 				</div>
