--- a/public/workoutV2.html
+++ b/public/workoutV2.html
@@ -20,13 +20,13 @@
     				<div class="modal-body">
         				<form role="form">
   							<div class="form-group">
-    							<label for="first_name">First Name:</label>
+    							<label for="first_name" id="first_name">First Name:</label>
     							<input type="text" class="form-control" id="first_name-modal"></br>
-    							<label for="last_name">Last Name:</label>
+    							<label for="last_name" id="last_name">Last Name:</label>
     							<input type="text" class="form-control" id="last_name-modal"></br>
-  								<label for="user_name">Email (will be your username):</label>
+  								<label for="user_name" id="user_name">Email (will be your username):</label>
   								<input type="text" class="form-control" id="user_name-modal"></br>
-  								<label for="password">Password:</label>
+  								<label for="password" id="password">Password:</label>
   								<input type="password" class="form-control" id="password-modal"></br>
   							</div>
 						</form>
