--- a/public/workoutV2.html
+++ b/public/workoutV2.html
@@ -87,7 +87,7 @@
     			<div class="modal-content">
     				<div class="modal-header">
     					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        				<h4 class="modal-title">Create Exercise</h4>
+        				<h4 class="modal-title">New Set</h4>
     				</div>
     				<div class="modal-body" id="set-body">
         				<form role="form">
